# PetsApi

./: pyproject.toml
pets/: main.py
pets/config/: __init__.py  database.py
pets/controller/: __init__.py  animal.py  weather.py
pets/models/: __init__.py  animal.py  common.py  toy.py
pets/schemas/: __init__.py  animal.py  location.py  toy.py  weather.py
pets/services/: __init__.py  animal.py  weather.py
pets/templates/: index.html
pets/views/: __init__.py  home.py
tests/: test_pets.py
