[tool.poetry]
name = "pets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
Jinja2 = "^2.11.3"
httpx = "^0.17.1"
databases = "^0.4.3"
orm = "^0.1.5"
aiomysql = "^0.0.21"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "pets.main:start"
